# learn-networking

./: README.md  client.py  config_example.toml  main.py  render.yaml  server.py
c/: makefile  tcp_listener.c
c/raw/: makefile  ping.c  sniffer.c
c/tcp/: client.c  common.c  common.h  listener.c  makefile  test_endiannes.c
denat/: .gitignore  README.md  client.py  config_example.toml  mypy.ini  pyproject.toml  server.py
denat/denat/: client.py  net.py  reudp.py  server.py  stats.py  t.py
django-blog/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  proxy.Dockerfile  pyproject.toml  secret_gen.py  serve_script.sh  simple_start.sh  start_docker.sh
django-blog/blog/: admin.py  easter.py  models.py  tests.py  urls.py  views.py
django-blog/blog/migrations/: 0001_initial.py
django-blog/blog/static/blog/: style.css
django-blog/blog/templates/blog/: base.html  detail.html  index.html
django-blog/dev/: docker-compose.yml
django-blog/mysite/: middleware.py  settings.py  urls.py
django-blog/templates/admin/: base_site.html
my-ip/: README.md  render.yaml
sockets/: README.md  client.py  server.py
sockets/c/raw/: makefile  ping.c  sniffer.c
sockets/c/tcp/: client.c  common.c  common.h  listener.c  test_inherit.c  test_strlen.c
wifi-share/: Cargo.toml
