[project]
name = "django-blog"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.1",
    "mypy>=1.13.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.settings"
