[project]
name = "django-blog"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "verbose-csrf-middleware>=1.0.4",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "django-stubs[compatible-mypy]>=5.1.1",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.settings"

[tool.ruff]
line-length = 80
exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes,
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff specific
    "RUF",
    # type checking
    "TC",
    # pylint
    "PL",
    # django's stuff
    "DJ",
    # datetime
    "DTZ",
    # simplify lint
    "SIM",
]
ignore = [
    # I don't agree that Optional should be deprecated
    "UP007",
    # ok, ClassVar is great, but... no
    "RUF012",
    # ruff should re-format long lines anyway, if possible
    "E501",
]
